# ulendo-tiketi

./: README.md
backend/: .env.example  .gitignore  .readthedocs.yaml  API-Documentation.md  README.md  create_admin.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  extensions.py  models.py
backend/app/blueprints/: auth.py  banks.py  bookings.py  branches.py  buses.py  companies.py  dashboard.py  employees.py  payments.py  payouts.py  routes.py  schedules.py  search.py  users.py
backend/app/utils/: email_services.py  paychangu_payouts.py  payments.py  qr_generator.py
backend/migrations/versions/: 02e28c6b6c87_removed_name_field_from_buses_table.py  1ce38dec7306_modified_db.py  22eeed9e497f_initial_migration.py  30d934ddd663_changed_type_of_status_attribute_in_bus_.py  35b1096a2567_changes_in_payouts_table.py  3619b2dff93a_initial_migration.py  42e9e22fd6f7_initial_migration.py  4955ede7e0f7_timezone_support_on_dates_and_times.py  53fd8dae492d_added_payment_link_column_in_bookings_.py  6380e48f5dc8_added_name_field_in_buses_table.py  6cdca80216ce_initial_migration.py  769a273b9ddd_initial_migration.py  8d88773ad29a_changes_in_description_contact_info_and_.py  8f5932145351_added_seat_number_field_in_bookings_.py  b642e0cdcbed_updated_password_length.py  b68b7ce51044_added_partner_and_partnership_end_.py  c567685f0d7f_replace_qrcode_with_qr_code_reference_.py  d4613249d985_added_employee_invitations_table_to_.py  d9253defd1fb_initial_migration.py  e49aeb7cbe7a_initial_schema.py  e5a6bffed659_initial_migration.py  (+3 more)
frontend/: README.md  (+4 more)
(+19 files in other folders)
